--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
 asgiref==3.8.1
+boto3==1.35.81
+botocore==1.35.81
 Django==4.1
+django-storages==1.14.4
+jmespath==1.0.1
 pillow==11.0.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+s3transfer==0.10.4
+six==1.17.0
 sqlparse==0.5.2
 typing_extensions==4.12.2
+urllib3==2.2.3
